--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -1087,6 +1087,62 @@
       "error_no_item_name": "출금할 아이템 이름을 확인할 수 없습니다",
       "error_withdrawal_failed": "아이템 출금 중 오류 발생",
       "error_not_found": "아이템을 출금하지 못했습니다"
+    },
+    "settings": {
+      "title": "설정",
+      "username": "사용자명",
+      "username_placeholder": "사용자명",
+      "username_description": "사이트에서 표시되는 이름 (3-20자)",
+      "new_password": "새 비밀번호",
+      "new_password_placeholder": "새 비밀번호 입력",
+      "password_requirements": "최소 8자, 대소문자, 숫자, 특수문자",
+      "confirm_password": "비밀번호 확인",
+      "confirm_password_placeholder": "비밀번호 확인",
+      "passwords_not_match": "비밀번호가 일치하지 않습니다",
+      "steam_trade_url": "Steam 거래 URL",
+      "trade_url_set": "설정됨",
+      "trade_url_tooltip": {
+        "title": "거래 URL 찾는 방법:",
+        "step1": "1. 브라우저에서 Steam 열기",
+        "step2": "2. 인벤토리 → 거래 제안으로 이동",
+        "step3": "3. \"누가 나에게 거래 제안을 보낼 수 있나요?\" 클릭",
+        "step4": "4. \"거래 URL\" 필드에서 URL 복사",
+        "example": "URL 형식: https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      },
+      "fetch_trade_url_auto": "자동으로 가져오기",
+      "steam_profile_label": "Steam 프로필",
+      "steam_connected": "Steam 연결됨",
+      "connect_steam": "Steam 연결",
+      "click_to_connect": "클릭하여 연결",
+      "email_verification_label": "이메일 인증",
+      "email_verified": "이메일 인증됨",
+      "verify_email_button": "이메일 인증",
+      "click_to_send_code": "코드를 보내려면 클릭",
+      "saving": "저장 중...",
+      "invalid_username": "잘못된 사용자명",
+      "password_min_8_chars": "비밀번호는 최소 8자 이상이어야 합니다",
+      "password_need_uppercase": "비밀번호에 대문자가 포함되어야 합니다",
+      "password_need_lowercase": "비밀번호에 소문자가 포함되어야 합니다",
+      "password_need_digit": "비밀번호에 숫자가 포함되어야 합니다",
+      "password_need_special": "비밀번호에 특수문자가 포함되어야 합니다",
+      "settings_saved": "설정이 저장되었습니다",
+      "settings_save_error": "설정 저장 중 오류가 발생했습니다",
+      "steam_link_error": "Steam 연결 중 오류가 발생했습니다",
+      "verification_code_sent": "인증 코드가 전송되었습니다",
+      "verification_code_error": "인증 코드 전송 중 오류가 발생했습니다",
+      "email_verified_success": "이메일이 성공적으로 인증되었습니다",
+      "email_verify_error": "이메일 인증 중 오류가 발생했습니다",
+      "steam_not_connected_error": "Steam이 연결되지 않았습니다",
+      "trade_url_fetched": "거래 URL이 가져와졌습니다",
+      "trade_url_manual_instructions": "수동으로 거래 URL을 입력해주세요",
+      "trade_url_fetch_error": "거래 URL 가져오기 중 오류가 발생했습니다",
+      "trade_url_fetch_network_error": "네트워크 오류로 거래 URL을 가져올 수 없습니다",
+      "trade_url_required": "거래 URL이 필요합니다"
+    },
+    "subscription": {
+      "no_subscription": "구독 없음",
+      "status": "상태",
+      "purchase_suggestion": "구독 구매를 위해 프로필로 이동하세요"
     }
   }
 }
