--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -263,6 +263,75 @@
       "error_no_item_name": "Konnte Gegenstandsname für Abhebung nicht bestimmen",
       "error_withdrawal_failed": "Fehler beim Abheben des Gegenstands",
       "error_not_found": "Gegenstand konnte nicht abgehoben werden"
+    },
+    "settings": {
+      "title": "Einstellungen",
+      "username": "Benutzername",
+      "username_placeholder": "Neuen Benutzernamen eingeben",
+      "username_description": "Ihr Anzeigename auf der Website (3-20 Zeichen)",
+      "new_password": "Neues Passwort",
+      "new_password_placeholder": "Neues Passwort eingeben",
+      "password_requirements": "Mindestens 8 Zeichen, Groß- und Kleinbuchstaben, Zahlen, Sonderzeichen",
+      "confirm_password": "Passwort bestätigen",
+      "confirm_password_placeholder": "Neues Passwort wiederholen",
+      "passwords_not_match": "Passwörter stimmen nicht überein",
+      "password_min_8_chars": "Passwort muss mindestens 8 Zeichen enthalten",
+      "password_need_uppercase": "Passwort muss einen Großbuchstaben enthalten",
+      "password_need_lowercase": "Passwort muss einen Kleinbuchstaben enthalten",
+      "password_need_digit": "Passwort muss eine Ziffer enthalten",
+      "password_need_special": "Passwort muss ein Sonderzeichen enthalten",
+      "invalid_username": "Ungültiger Benutzername",
+      "settings_saved": "Einstellungen erfolgreich gespeichert!",
+      "settings_save_error": "Einstellungen konnten nicht gespeichert werden",
+      "steam_link_error": "Fehler: Autorisierungstoken nicht gefunden. Bitte melden Sie sich erneut an.",
+      "verification_code_sent": "Bestätigungscode an Ihre E-Mail gesendet!",
+      "verification_code_error": "Fehler: Code konnte nicht gesendet werden",
+      "email_verified_success": "E-Mail erfolgreich bestätigt!",
+      "email_verify_error": "Fehler: Ungültiger Bestätigungscode",
+      "steam_not_connected_error": "Steam-Konto zuerst verbinden",
+      "trade_url_fetched": "Handels-URL automatisch abgerufen und gespeichert!",
+      "trade_url_manual_instructions": "Handels-URL manuell abrufen",
+      "trade_url_fetch_error": "Handels-URL konnte nicht abgerufen werden. Bitte später versuchen.",
+      "trade_url_fetch_network_error": "Fehler beim Abrufen der Handels-URL",
+      "steam_trade_url": "Steam Handels-URL",
+      "trade_url_label": "Steam Handels-URL",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "Erforderlich für automatischen Gegenstandsversand. Kann automatisch abgerufen werden!",
+      "trade_url_locked": "Handels-URL gespeichert und gesperrt",
+      "trade_url_set": "Gesetzt",
+      "connect_steam_first": "Steam-Konto zuerst verbinden",
+      "fetching_trade_url": "Abrufen...",
+      "fetch_trade_url_auto": "Automatisch abrufen",
+      "steam_profile_label": "Steam-Profil",
+      "steam_connected": "Steam verbunden",
+      "connect_steam": "Steam verbinden",
+      "click_to_connect": "Zum Verbinden klicken",
+      "email_verification_label": "E-Mail-Bestätigung",
+      "email_verified": "E-Mail bestätigt",
+      "verify_email_button": "E-Mail bestätigen",
+      "click_to_send_code": "Zum Senden des Codes klicken",
+      "saving": "Speichern...",
+      "email_verification_modal": {
+        "title": "E-Mail-Bestätigung",
+        "send_code_to": "Wir senden einen Bestätigungscode an:",
+        "code_valid_time": "Code ist 15 Minuten gültig",
+        "sending_code": "Code wird gesendet...",
+        "send_code": "Code senden",
+        "code_sent": "Code gesendet!",
+        "enter_code": "6-stelligen Code aus der E-Mail eingeben",
+        "verifying": "Überprüfung...",
+        "verify": "Bestätigen",
+        "resend": "Erneut senden",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "So finden Sie die Handels-URL:",
+        "step1": "1. Steam im Browser öffnen",
+        "step2": "2. Zu Inventar → Handelsangebote gehen",
+        "step3": "3. \"Wer kann mir Handelsangebote senden?\" klicken",
+        "step4": "4. URL aus dem Feld \"Handels-URL\" kopieren",
+        "example": "URL sieht so aus: https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
     }
   },
   "inventory": {
