--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -263,6 +263,75 @@
       "error_no_item_name": "No se pudo determinar el nombre del objeto para retiro",
       "error_withdrawal_failed": "Error al retirar el objeto",
       "error_not_found": "No se pudo retirar el objeto"
+    },
+    "settings": {
+      "title": "Configuración",
+      "username": "Nombre de usuario",
+      "username_placeholder": "Introduce un nuevo nombre de usuario",
+      "username_description": "Tu nombre mostrado en el sitio (3-20 caracteres)",
+      "new_password": "Nueva contraseña",
+      "new_password_placeholder": "Introduce una nueva contraseña",
+      "password_requirements": "Mínimo 8 caracteres, mayúsculas y minúsculas, números, caracteres especiales",
+      "confirm_password": "Confirmar contraseña",
+      "confirm_password_placeholder": "Repite la nueva contraseña",
+      "passwords_not_match": "Las contraseñas no coinciden",
+      "password_min_8_chars": "La contraseña debe tener al menos 8 caracteres",
+      "password_need_uppercase": "La contraseña debe contener una letra mayúscula",
+      "password_need_lowercase": "La contraseña debe contener una letra minúscula",
+      "password_need_digit": "La contraseña debe contener un dígito",
+      "password_need_special": "La contraseña debe contener un carácter especial",
+      "invalid_username": "Nombre de usuario inválido",
+      "settings_saved": "¡Configuración guardada con éxito!",
+      "settings_save_error": "Error al guardar la configuración",
+      "steam_link_error": "Error: token de autorización no encontrado. Por favor, inicia sesión de nuevo.",
+      "verification_code_sent": "¡Código de verificación enviado a tu email!",
+      "verification_code_error": "Error: No se pudo enviar el código",
+      "email_verified_success": "¡Email verificado con éxito!",
+      "email_verify_error": "Error: Código de verificación inválido",
+      "steam_not_connected_error": "Conecta primero la cuenta Steam",
+      "trade_url_fetched": "¡URL Trade obtenida automáticamente y guardada!",
+      "trade_url_manual_instructions": "Obtener URL Trade manualmente",
+      "trade_url_fetch_error": "Error al obtener URL Trade. Inténtalo más tarde.",
+      "trade_url_fetch_network_error": "Error al obtener URL Trade",
+      "steam_trade_url": "URL Steam Trade",
+      "trade_url_label": "URL Steam Trade",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "Requerido para envío automático de objetos. ¡Se puede obtener automáticamente!",
+      "trade_url_locked": "URL Trade guardada y bloqueada",
+      "trade_url_set": "Configurada",
+      "connect_steam_first": "Conecta primero la cuenta Steam",
+      "fetching_trade_url": "Obteniendo...",
+      "fetch_trade_url_auto": "Obtener automáticamente",
+      "steam_profile_label": "Perfil Steam",
+      "steam_connected": "Steam conectado",
+      "connect_steam": "Conectar Steam",
+      "click_to_connect": "Clic para conectar",
+      "email_verification_label": "Verificación de Email",
+      "email_verified": "Email verificado",
+      "verify_email_button": "Verificar Email",
+      "click_to_send_code": "Clic para enviar código",
+      "saving": "Guardando...",
+      "email_verification_modal": {
+        "title": "Verificación de Email",
+        "send_code_to": "Enviaremos un código de verificación a:",
+        "code_valid_time": "El código es válido por 15 minutos",
+        "sending_code": "Enviando código...",
+        "send_code": "Enviar código",
+        "code_sent": "¡Código enviado!",
+        "enter_code": "Introduce el código de 6 dígitos del email",
+        "verifying": "Verificando...",
+        "verify": "Verificar",
+        "resend": "Reenviar",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "Cómo encontrar la URL Trade:",
+        "step1": "1. Abre Steam en el navegador",
+        "step2": "2. Ve a Inventario → Ofertas de intercambio",
+        "step3": "3. Haz clic en \"¿Quién puede enviarme ofertas de intercambio?\"",
+        "step4": "4. Copia la URL del campo \"URL Trade\"",
+        "example": "La URL se ve como: https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
     }
   },
   "inventory": {
