--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -263,6 +263,75 @@
       "error_no_item_name": "Impossible de déterminer le nom de l'objet pour le retrait",
       "error_withdrawal_failed": "Erreur lors du retrait de l'objet",
       "error_not_found": "Impossible de retirer l'objet"
+    },
+    "settings": {
+      "title": "Paramètres",
+      "username": "Nom d'utilisateur",
+      "username_placeholder": "Entrer un nouveau nom d'utilisateur",
+      "username_description": "Votre nom d'affichage sur le site (3-20 caractères)",
+      "new_password": "Nouveau mot de passe",
+      "new_password_placeholder": "Entrer un nouveau mot de passe",
+      "password_requirements": "Minimum 8 caractères, majuscules et minuscules, chiffres, caractères spéciaux",
+      "confirm_password": "Confirmer le mot de passe",
+      "confirm_password_placeholder": "Répéter le nouveau mot de passe",
+      "passwords_not_match": "Les mots de passe ne correspondent pas",
+      "password_min_8_chars": "Le mot de passe doit contenir au moins 8 caractères",
+      "password_need_uppercase": "Le mot de passe doit contenir une majuscule",
+      "password_need_lowercase": "Le mot de passe doit contenir une minuscule",
+      "password_need_digit": "Le mot de passe doit contenir un chiffre",
+      "password_need_special": "Le mot de passe doit contenir un caractère spécial",
+      "invalid_username": "Nom d'utilisateur invalide",
+      "settings_saved": "Paramètres sauvegardés avec succès !",
+      "settings_save_error": "Échec de la sauvegarde des paramètres",
+      "steam_link_error": "Erreur : jeton d'autorisation introuvable. Veuillez vous reconnecter.",
+      "verification_code_sent": "Code de vérification envoyé à votre email !",
+      "verification_code_error": "Erreur : Échec de l'envoi du code",
+      "email_verified_success": "Email vérifié avec succès !",
+      "email_verify_error": "Erreur : Code de vérification invalide",
+      "steam_not_connected_error": "Connecter d'abord le compte Steam",
+      "trade_url_fetched": "URL Trade récupérée automatiquement et sauvegardée !",
+      "trade_url_manual_instructions": "Obtenir l'URL Trade manuellement",
+      "trade_url_fetch_error": "Échec de la récupération de l'URL Trade. Réessayez plus tard.",
+      "trade_url_fetch_network_error": "Erreur lors de la récupération de l'URL Trade",
+      "steam_trade_url": "URL Steam Trade",
+      "trade_url_label": "URL Steam Trade",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "Requis pour l'envoi automatique d'objets. Peut être obtenu automatiquement !",
+      "trade_url_locked": "URL Trade sauvegardée et verrouillée",
+      "trade_url_set": "Défini",
+      "connect_steam_first": "Connecter d'abord le compte Steam",
+      "fetching_trade_url": "Récupération...",
+      "fetch_trade_url_auto": "Obtenir automatiquement",
+      "steam_profile_label": "Profil Steam",
+      "steam_connected": "Steam connecté",
+      "connect_steam": "Connecter Steam",
+      "click_to_connect": "Cliquer pour connecter",
+      "email_verification_label": "Vérification Email",
+      "email_verified": "Email vérifié",
+      "verify_email_button": "Vérifier l'Email",
+      "click_to_send_code": "Cliquer pour envoyer le code",
+      "saving": "Sauvegarde...",
+      "email_verification_modal": {
+        "title": "Vérification Email",
+        "send_code_to": "Nous enverrons un code de vérification à :",
+        "code_valid_time": "Le code est valide pendant 15 minutes",
+        "sending_code": "Envoi du code...",
+        "send_code": "Envoyer le code",
+        "code_sent": "Code envoyé !",
+        "enter_code": "Entrer le code à 6 chiffres de l'email",
+        "verifying": "Vérification...",
+        "verify": "Vérifier",
+        "resend": "Renvoyer",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "Comment trouver l'URL Trade :",
+        "step1": "1. Ouvrir Steam dans le navigateur",
+        "step2": "2. Aller à Inventaire → Offres d'échange",
+        "step3": "3. Cliquer sur \"Qui peut m'envoyer des offres d'échange ?\"",
+        "step4": "4. Copier l'URL du champ \"URL Trade\"",
+        "example": "L'URL ressemble à : https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
     }
   },
   "inventory": {
