--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -263,6 +263,75 @@
       "error_no_item_name": "无法确定提取的物品名称",
       "error_withdrawal_failed": "提取物品时出错",
       "error_not_found": "提取物品失败"
+    },
+    "settings": {
+      "title": "设置",
+      "username": "用户名",
+      "username_placeholder": "输入新用户名",
+      "username_description": "您在网站上显示的名称（3-20个字符）",
+      "new_password": "新密码",
+      "new_password_placeholder": "输入新密码",
+      "password_requirements": "至少8个字符，大小写字母、数字、特殊字符",
+      "confirm_password": "确认密码",
+      "confirm_password_placeholder": "重复输入新密码",
+      "passwords_not_match": "密码不匹配",
+      "password_min_8_chars": "密码必须包含至少8个字符",
+      "password_need_uppercase": "密码必须包含大写字母",
+      "password_need_lowercase": "密码必须包含小写字母",
+      "password_need_digit": "密码必须包含数字",
+      "password_need_special": "密码必须包含特殊字符",
+      "invalid_username": "无效的用户名",
+      "settings_saved": "设置保存成功！",
+      "settings_save_error": "保存设置失败",
+      "steam_link_error": "错误：未找到授权令牌。请重新登录。",
+      "verification_code_sent": "验证码已发送到您的邮箱！",
+      "verification_code_error": "错误：发送验证码失败",
+      "email_verified_success": "邮箱验证成功！",
+      "email_verify_error": "错误：无效的验证码",
+      "steam_not_connected_error": "请先连接Steam账号",
+      "trade_url_fetched": "交易链接已自动获取并保存！",
+      "trade_url_manual_instructions": "手动获取交易链接",
+      "trade_url_fetch_error": "获取交易链接失败。请稍后再试。",
+      "trade_url_fetch_network_error": "获取交易链接时出现网络错误",
+      "steam_trade_url": "Steam交易链接",
+      "trade_url_label": "Steam交易链接",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "自动发送物品所需。可以自动获取！",
+      "trade_url_locked": "交易链接已保存并锁定",
+      "trade_url_set": "已设置",
+      "connect_steam_first": "请先连接Steam账号",
+      "fetching_trade_url": "获取中...",
+      "fetch_trade_url_auto": "自动获取",
+      "steam_profile_label": "Steam资料",
+      "steam_connected": "Steam已连接",
+      "connect_steam": "连接Steam",
+      "click_to_connect": "点击连接",
+      "email_verification_label": "邮箱验证",
+      "email_verified": "邮箱已验证",
+      "verify_email_button": "验证邮箱",
+      "click_to_send_code": "点击发送验证码",
+      "saving": "保存中...",
+      "email_verification_modal": {
+        "title": "邮箱验证",
+        "send_code_to": "我们将向以下地址发送验证码：",
+        "code_valid_time": "验证码有效期15分钟",
+        "sending_code": "发送验证码中...",
+        "send_code": "发送验证码",
+        "code_sent": "验证码已发送！",
+        "enter_code": "输入邮件中的6位验证码",
+        "verifying": "验证中...",
+        "verify": "验证",
+        "resend": "重新发送",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "如何找到交易链接：",
+        "step1": "1. 在浏览器中打开Steam",
+        "step2": "2. 前往库存 → 交易报价",
+        "step3": "3. 点击谁可以向我发送交易报价？",
+        "step4": "4. 从交易链接字段复制URL",
+        "example": "链接格式：https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
     }
   },
   "inventory": {
