--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -262,6 +262,75 @@
       "error_no_item_name": "출금할 아이템 이름을 확인할 수 없습니다",
       "error_withdrawal_failed": "아이템 출금 중 오류 발생",
       "error_not_found": "아이템을 출금하지 못했습니다"
+    },
+    "settings": {
+      "title": "설정",
+      "username": "사용자명",
+      "username_placeholder": "새 사용자명 입력",
+      "username_description": "사이트에서 표시되는 이름 (3-20자)",
+      "new_password": "새 비밀번호",
+      "new_password_placeholder": "새 비밀번호 입력",
+      "password_requirements": "최소 8자, 대소문자, 숫자, 특수문자 포함",
+      "confirm_password": "비밀번호 확인",
+      "confirm_password_placeholder": "새 비밀번호 재입력",
+      "passwords_not_match": "비밀번호가 일치하지 않습니다",
+      "password_min_8_chars": "비밀번호는 최소 8자 이상이어야 합니다",
+      "password_need_uppercase": "비밀번호에 대문자가 포함되어야 합니다",
+      "password_need_lowercase": "비밀번호에 소문자가 포함되어야 합니다",
+      "password_need_digit": "비밀번호에 숫자가 포함되어야 합니다",
+      "password_need_special": "비밀번호에 특수문자가 포함되어야 합니다",
+      "invalid_username": "잘못된 사용자명",
+      "settings_saved": "설정이 성공적으로 저장되었습니다!",
+      "settings_save_error": "설정 저장에 실패했습니다",
+      "steam_link_error": "오류: 인증 토큰을 찾을 수 없습니다. 다시 로그인해 주세요.",
+      "verification_code_sent": "인증 코드가 이메일로 전송되었습니다!",
+      "verification_code_error": "오류: 코드 전송에 실패했습니다",
+      "email_verified_success": "이메일이 성공적으로 인증되었습니다!",
+      "email_verify_error": "오류: 잘못된 인증 코드",
+      "steam_not_connected_error": "먼저 Steam 계정을 연결하세요",
+      "trade_url_fetched": "거래 URL이 자동으로 가져와져 저장되었습니다!",
+      "trade_url_manual_instructions": "거래 URL 수동으로 가져오기",
+      "trade_url_fetch_error": "거래 URL 가져오기에 실패했습니다. 나중에 다시 시도하세요.",
+      "trade_url_fetch_network_error": "거래 URL 가져오기 오류",
+      "steam_trade_url": "Steam 거래 URL",
+      "trade_url_label": "Steam 거래 URL",
+      "trade_url_placeholder": "https://steamcommunity.com/tradeoffer/new/...",
+      "trade_url_required": "자동 아이템 전송에 필요합니다. 자동으로 가져올 수 있습니다!",
+      "trade_url_locked": "거래 URL이 저장되고 잠겨있습니다",
+      "trade_url_set": "설정됨",
+      "connect_steam_first": "먼저 Steam 계정을 연결하세요",
+      "fetching_trade_url": "가져오는 중...",
+      "fetch_trade_url_auto": "자동으로 가져오기",
+      "steam_profile_label": "Steam 프로필",
+      "steam_connected": "Steam 연결됨",
+      "connect_steam": "Steam 연결",
+      "click_to_connect": "연결하려면 클릭",
+      "email_verification_label": "이메일 인증",
+      "email_verified": "이메일 인증됨",
+      "verify_email_button": "이메일 인증",
+      "click_to_send_code": "코드 전송하려면 클릭",
+      "saving": "저장 중...",
+      "email_verification_modal": {
+        "title": "이메일 인증",
+        "send_code_to": "인증 코드를 다음 주소로 전송합니다:",
+        "code_valid_time": "코드는 15분간 유효합니다",
+        "sending_code": "코드 전송 중...",
+        "send_code": "코드 전송",
+        "code_sent": "코드 전송됨!",
+        "enter_code": "이메일의 6자리 코드를 입력하세요",
+        "verifying": "인증 중...",
+        "verify": "인증",
+        "resend": "재전송",
+        "resending": "..."
+      },
+      "trade_url_tooltip": {
+        "title": "거래 URL 찾는 방법:",
+        "step1": "1. 브라우저에서 Steam 열기",
+        "step2": "2. 인벤토리 → 거래 제안으로 이동",
+        "step3": "3. \"누가 거래 제안을 보낼 수 있나요?\" 클릭",
+        "step4": "4. \"거래 URL\" 필드에서 URL 복사",
+        "example": "URL 형태: https://steamcommunity.com/tradeoffer/new/?partner=XXXXXXX&token=XXXXXXXX"
+      }
     }
   },
   "inventory": {
