публичный профиль (языки)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -334,6 +334,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "Profil wird geladen...",
+    "profile_not_available": "Das angegebene Profil existiert nicht oder ist nicht verfügbar",
+    "id_label": "ID:",
+    "registered": "Registriert:",
+    "drop_bonus": "Drop-Bonus",
+    "level_label": "Level:",
+    "status_label": "Status:",
+    "achievements_label": "Erfolge:",
+    "total_bonus": "Gesamtbonus:",
+    "cases_opened": "Kisten Geöffnet",
+    "items_in_inventory": "Gegenstände im Inventar",
+    "total_value": "Gesamtwert",
+    "daily_streak": "Tägliche Serie",
+    "daily_streak_format": "{{current}} Tage (max: {{max}})",
+    "achievements_section": "Erfolge ({{count}})",
+    "more_achievements": "Weitere Erfolge",
+    "all_time_record": "Allzeit-Rekord",
+    "no_record_set": "Noch kein Rekord aufgestellt",
+    "inventory_section": "Inventar ({{count}} Gegenstände)",
+    "items_tab": "Gegenstände",
+    "opened_cases_tab": "Geöffnete Kisten",
+    "inventory_description_active": "🎮 Aktive Gegenstände des Benutzers",
+    "inventory_description_opened": "📦 Geöffnete Kisten - bewegen Sie den Mauszeiger über die Kiste, um den erhaltenen Gegenstand zu sehen",
+    "show_all": "Alle Anzeigen",
+    "hide": "Verstecken",
+    "more_items": "Weitere Gegenstände",
+    "show_less": "Weniger Anzeigen",
+    "no_active_items": "Keine aktiven Gegenstände",
+    "no_opened_cases": "Keine geöffneten Kisten",
+    "no_active_items_description": "Der Benutzer hat noch keine Gegenstände im Inventar",
+    "no_opened_cases_description": "Der Benutzer hat noch keine Kisten geöffnet oder die Gegenstände aus den Kisten wurden verkauft",
+    "acquired": "Erhalten:",
+    "source": "Quelle:",
+    "weapon_type": "Typ:",
+    "weapon_type_default": "Waffe",
+    "achievement_categories": {
+      "beginner": "Anfänger",
+      "collector": "Sammler",
+      "regular": "Regulär",
+      "expert": "Experte",
+      "legendary": "Legendär"
+    }
+  },
   "inventory": {
     "title": "Inventar",
     "your_items": "Deine Gegenstände",
