--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -330,6 +330,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "Loading profile...",
+    "profile_not_available": "The specified profile does not exist or is unavailable",
+    "id_label": "ID:",
+    "registered": "Registered:",
+    "drop_bonus": "Drop Bonus",
+    "level_label": "Level:",
+    "status_label": "Status:",
+    "achievements_label": "Achievements:",
+    "total_bonus": "Total Bonus:",
+    "cases_opened": "Cases Opened",
+    "items_in_inventory": "Items in Inventory",
+    "total_value": "Total Value",
+    "daily_streak": "Daily Streak",
+    "daily_streak_format": "{{current}} days (max: {{max}})",
+    "achievements_section": "Achievements ({{count}})",
+    "more_achievements": "More achievements",
+    "all_time_record": "All-Time Record",
+    "no_record_set": "No record set yet",
+    "inventory_section": "Inventory ({{count}} items)",
+    "items_tab": "Items",
+    "opened_cases_tab": "Opened Cases",
+    "inventory_description_active": "🎮 User's active items",
+    "inventory_description_opened": "📦 Opened cases - hover over case to see the dropped item",
+    "show_all": "Show All",
+    "hide": "Hide",
+    "more_items": "More items",
+    "show_less": "Show Less",
+    "no_active_items": "No active items",
+    "no_opened_cases": "No opened cases",
+    "no_active_items_description": "User has no items in inventory yet",
+    "no_opened_cases_description": "User hasn't opened cases yet, or items from cases were sold",
+    "acquired": "Acquired:",
+    "source": "Source:",
+    "weapon_type": "Type:",
+    "weapon_type_default": "Weapon",
+    "achievement_categories": {
+      "beginner": "Beginner",
+      "collector": "Collector",
+      "regular": "Regular",
+      "expert": "Expert",
+      "legendary": "Legendary"
+    }
+  },
   "inventory": {
     "title": "Inventory",
     "your_items": "Your Items",
