--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -334,6 +334,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "Cargando perfil...",
+    "profile_not_available": "El perfil especificado no existe o no está disponible",
+    "id_label": "ID:",
+    "registered": "Registrado:",
+    "drop_bonus": "Bono de Drop",
+    "level_label": "Nivel:",
+    "status_label": "Estado:",
+    "achievements_label": "Logros:",
+    "total_bonus": "Bono Total:",
+    "cases_opened": "Cajas Abiertas",
+    "items_in_inventory": "Objetos en Inventario",
+    "total_value": "Valor Total",
+    "daily_streak": "Racha Diaria",
+    "daily_streak_format": "{{current}} días (máx: {{max}})",
+    "achievements_section": "Logros ({{count}})",
+    "more_achievements": "Más logros",
+    "all_time_record": "Récord de Todos los Tiempos",
+    "no_record_set": "Aún no se ha establecido récord",
+    "inventory_section": "Inventario ({{count}} objetos)",
+    "items_tab": "Objetos",
+    "opened_cases_tab": "Cajas Abiertas",
+    "inventory_description_active": "🎮 Objetos activos del usuario",
+    "inventory_description_opened": "📦 Cajas abiertas - pasa el cursor sobre la caja para ver el objeto obtenido",
+    "show_all": "Mostrar Todo",
+    "hide": "Ocultar",
+    "more_items": "Más objetos",
+    "show_less": "Mostrar Menos",
+    "no_active_items": "Sin objetos activos",
+    "no_opened_cases": "Sin cajas abiertas",
+    "no_active_items_description": "El usuario aún no tiene objetos en el inventario",
+    "no_opened_cases_description": "El usuario aún no ha abierto cajas, o los objetos de las cajas fueron vendidos",
+    "acquired": "Adquirido:",
+    "source": "Fuente:",
+    "weapon_type": "Tipo:",
+    "weapon_type_default": "Arma",
+    "achievement_categories": {
+      "beginner": "Principiante",
+      "collector": "Coleccionista",
+      "regular": "Regular",
+      "expert": "Experto",
+      "legendary": "Legendario"
+    }
+  },
   "inventory": {
     "title": "Inventario",
     "your_items": "Tus Objetos",
