--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -334,6 +334,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "Chargement du profil...",
+    "profile_not_available": "Le profil spécifié n'existe pas ou n'est pas disponible",
+    "id_label": "ID :",
+    "registered": "Inscrit :",
+    "drop_bonus": "Bonus de Drop",
+    "level_label": "Niveau :",
+    "status_label": "Statut :",
+    "achievements_label": "Succès :",
+    "total_bonus": "Bonus Total :",
+    "cases_opened": "Caisses Ouvertes",
+    "items_in_inventory": "Objets dans l'Inventaire",
+    "total_value": "Valeur Totale",
+    "daily_streak": "Série Quotidienne",
+    "daily_streak_format": "{{current}} jours (max : {{max}})",
+    "achievements_section": "Succès ({{count}})",
+    "more_achievements": "Plus de succès",
+    "all_time_record": "Record de Tous les Temps",
+    "no_record_set": "Aucun record établi pour le moment",
+    "inventory_section": "Inventaire ({{count}} objets)",
+    "items_tab": "Objets",
+    "opened_cases_tab": "Caisses Ouvertes",
+    "inventory_description_active": "🎮 Objets actifs de l'utilisateur",
+    "inventory_description_opened": "📦 Caisses ouvertes - survolez la caisse pour voir l'objet obtenu",
+    "show_all": "Tout Afficher",
+    "hide": "Masquer",
+    "more_items": "Plus d'objets",
+    "show_less": "Afficher Moins",
+    "no_active_items": "Aucun objet actif",
+    "no_opened_cases": "Aucune caisse ouverte",
+    "no_active_items_description": "L'utilisateur n'a pas encore d'objets dans l'inventaire",
+    "no_opened_cases_description": "L'utilisateur n'a pas encore ouvert de caisses, ou les objets des caisses ont été vendus",
+    "acquired": "Acquis :",
+    "source": "Source :",
+    "weapon_type": "Type :",
+    "weapon_type_default": "Arme",
+    "achievement_categories": {
+      "beginner": "Débutant",
+      "collector": "Collectionneur",
+      "regular": "Régulier",
+      "expert": "Expert",
+      "legendary": "Légendaire"
+    }
+  },
   "inventory": {
     "title": "Inventaire",
     "your_items": "Vos Objets",
