--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -350,6 +350,50 @@
       "purchase_suggestion": "サブスクリプション購入のためプロフィールに移動してください"
     }
   },
+  "public_profile": {
+    "loading_profile": "プロフィールを読み込み中...",
+    "profile_not_available": "指定されたプロフィールは存在しないか利用できません",
+    "id_label": "ID:",
+    "registered": "登録日:",
+    "drop_bonus": "ドロップボーナス",
+    "level_label": "レベル:",
+    "status_label": "ステータス:",
+    "achievements_label": "実績:",
+    "total_bonus": "合計ボーナス:",
+    "cases_opened": "開封したケース",
+    "items_in_inventory": "インベントリのアイテム",
+    "total_value": "総価値",
+    "daily_streak": "デイリーストリーク",
+    "daily_streak_format": "{{current}}日 (最大: {{max}})",
+    "achievements_section": "実績 ({{count}})",
+    "more_achievements": "その他の実績",
+    "all_time_record": "歴代記録",
+    "no_record_set": "まだ記録が設定されていません",
+    "inventory_section": "インベントリ ({{count}} アイテム)",
+    "items_tab": "アイテム",
+    "opened_cases_tab": "開封済みケース",
+    "inventory_description_active": "🎮 ユーザーのアクティブアイテム",
+    "inventory_description_opened": "📦 開封済みケース - ケースにカーソルを合わせてドロップアイテムを確認",
+    "show_all": "すべて表示",
+    "hide": "非表示",
+    "more_items": "その他のアイテム",
+    "show_less": "表示を減らす",
+    "no_active_items": "アクティブアイテムなし",
+    "no_opened_cases": "開封済みケースなし",
+    "no_active_items_description": "ユーザーはまだインベントリにアイテムを持っていません",
+    "no_opened_cases_description": "ユーザーはまだケースを開封していないか、ケースのアイテムが売却されました",
+    "acquired": "取得日:",
+    "source": "ソース:",
+    "weapon_type": "タイプ:",
+    "weapon_type_default": "武器",
+    "achievement_categories": {
+      "beginner": "初心者",
+      "collector": "コレクター",
+      "regular": "レギュラー",
+      "expert": "エキスパート",
+      "legendary": "レジェンダリー"
+    }
+  },
   "inventory": {
     "title": "インベントリ",
     "your_items": "所有アイテム",
