--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -333,6 +333,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "프로필 로딩 중...",
+    "profile_not_available": "지정된 프로필이 존재하지 않거나 사용할 수 없습니다",
+    "id_label": "ID:",
+    "registered": "등록일:",
+    "drop_bonus": "드롭 보너스",
+    "level_label": "레벨:",
+    "status_label": "상태:",
+    "achievements_label": "업적:",
+    "total_bonus": "총 보너스:",
+    "cases_opened": "열린 케이스",
+    "items_in_inventory": "인벤토리 아이템",
+    "total_value": "총 가치",
+    "daily_streak": "일일 연속",
+    "daily_streak_format": "{{current}}일 (최대: {{max}})",
+    "achievements_section": "업적 ({{count}})",
+    "more_achievements": "더 많은 업적",
+    "all_time_record": "역대 기록",
+    "no_record_set": "아직 기록이 설정되지 않았습니다",
+    "inventory_section": "인벤토리 ({{count}} 아이템)",
+    "items_tab": "아이템",
+    "opened_cases_tab": "열린 케이스",
+    "inventory_description_active": "🎮 사용자의 활성 아이템",
+    "inventory_description_opened": "📦 열린 케이스 - 케이스에 마우스를 올려 드롭된 아이템 확인",
+    "show_all": "모두 보기",
+    "hide": "숨기기",
+    "more_items": "더 많은 아이템",
+    "show_less": "적게 보기",
+    "no_active_items": "활성 아이템 없음",
+    "no_opened_cases": "열린 케이스 없음",
+    "no_active_items_description": "사용자가 아직 인벤토리에 아이템이 없습니다",
+    "no_opened_cases_description": "사용자가 아직 케이스를 열지 않았거나 케이스의 아이템이 판매되었습니다",
+    "acquired": "획득일:",
+    "source": "소스:",
+    "weapon_type": "타입:",
+    "weapon_type_default": "무기",
+    "achievement_categories": {
+      "beginner": "초보자",
+      "collector": "수집가",
+      "regular": "일반",
+      "expert": "전문가",
+      "legendary": "전설"
+    }
+  },
   "inventory": {
     "title": "인벤토리",
     "your_items": "보유 아이템",
