--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -334,6 +334,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "加载个人资料...",
+    "profile_not_available": "指定的个人资料不存在或不可用",
+    "id_label": "ID:",
+    "registered": "注册时间:",
+    "drop_bonus": "掉落奖励",
+    "level_label": "等级:",
+    "status_label": "状态:",
+    "achievements_label": "成就:",
+    "total_bonus": "总奖励:",
+    "cases_opened": "已开箱子",
+    "items_in_inventory": "背包物品",
+    "total_value": "总价值",
+    "daily_streak": "每日连击",
+    "daily_streak_format": "{{current}} 天 (最大: {{max}})",
+    "achievements_section": "成就 ({{count}})",
+    "more_achievements": "更多成就",
+    "all_time_record": "历史最佳",
+    "no_record_set": "尚未设定记录",
+    "inventory_section": "背包 ({{count}} 物品)",
+    "items_tab": "物品",
+    "opened_cases_tab": "已开箱子",
+    "inventory_description_active": "🎮 用户的活跃物品",
+    "inventory_description_opened": "📦 已开箱子 - 将鼠标悬停在箱子上查看掉落物品",
+    "show_all": "显示全部",
+    "hide": "隐藏",
+    "more_items": "更多物品",
+    "show_less": "显示更少",
+    "no_active_items": "没有活跃物品",
+    "no_opened_cases": "没有已开箱子",
+    "no_active_items_description": "用户背包中还没有物品",
+    "no_opened_cases_description": "用户尚未开启箱子，或箱子中的物品已被出售",
+    "acquired": "获得时间:",
+    "source": "来源:",
+    "weapon_type": "类型:",
+    "weapon_type_default": "武器",
+    "achievement_categories": {
+      "beginner": "新手",
+      "collector": "收藏家",
+      "regular": "常规",
+      "expert": "专家",
+      "legendary": "传奇"
+    }
+  },
   "inventory": {
     "title": "背包",
     "your_items": "您的物品",
