--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -329,6 +329,50 @@
       }
     }
   },
+  "public_profile": {
+    "loading_profile": "Загрузка профиля...",
+    "profile_not_available": "Указанный профиль не существует или недоступен",
+    "id_label": "ID:",
+    "registered": "Зарегистрирован:",
+    "drop_bonus": "Бонус к дропу",
+    "level_label": "Уровень:",
+    "status_label": "Статус:",
+    "achievements_label": "Достижения:",
+    "total_bonus": "Общий бонус:",
+    "cases_opened": "Кейсов открыто",
+    "items_in_inventory": "Предметов в инвентаре",
+    "total_value": "Общая стоимость",
+    "daily_streak": "Ежедневная серия",
+    "daily_streak_format": "{{current}} дн. (макс: {{max}})",
+    "achievements_section": "Достижения ({{count}})",
+    "more_achievements": "Ещё достижений",
+    "all_time_record": "Рекорд за всё время",
+    "no_record_set": "Пока не установлен рекорд",
+    "inventory_section": "Инвентарь ({{count}} предметов)",
+    "items_tab": "Предметы",
+    "opened_cases_tab": "Открытые кейсы",
+    "inventory_description_active": "🎮 Активные предметы пользователя",
+    "inventory_description_opened": "📦 Открытые кейсы - наведите на кейс, чтобы увидеть выпавший предмет",
+    "show_all": "Показать все",
+    "hide": "Скрыть",
+    "more_items": "Ещё предметов",
+    "show_less": "Показать меньше",
+    "no_active_items": "Нет активных предметов",
+    "no_opened_cases": "Нет открытых кейсов",
+    "no_active_items_description": "У пользователя пока нет предметов в инвентаре",
+    "no_opened_cases_description": "Пользователь пока не открывал кейсы, или предметы из кейсов были проданы",
+    "acquired": "Получен:",
+    "source": "Источник:",
+    "weapon_type": "Тип:",
+    "weapon_type_default": "Оружие",
+    "achievement_categories": {
+      "beginner": "Новичок",
+      "collector": "Коллекционер",
+      "regular": "Активный",
+      "expert": "Эксперт",
+      "legendary": "Легендарный"
+    }
+  },
   "inventory": {
     "title": "Инвентарь",
     "your_items": "Ваши предметы",
